--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,15 @@
 [tool.poetry]
 name = "python-quoridor"
-version = "0.1.0"
+version = "0.1.1"
 description = "python-quoridor is a a quoridor library for python, with move generation, move validation and support for common formats"
 authors = ["Tientjie <tientjieit@gmail.com>"]
 readme = "README.md"
-packages = [{include = "python_quoridor"}]
+packages = [{include = "quoridor"}]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.6"
+pytest = "^7"
 
 
 [build-system]
