--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "python-quoridor"
-version = "0.1.1"
+version = "0.1.2"
 description = "python-quoridor is a a quoridor library for python, with move generation, move validation and support for common formats"
 authors = ["Tientjie <tientjieit@gmail.com>"]
 readme = "README.md"
@@ -9,8 +9,10 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.6"
-pytest = "^7"
 
+
+[tool.poetry.dev-dependencies]
+pytest = "7.2.2"
 
 [build-system]
 requires = ["poetry-core"]
